src/test/ui/issue-35675.stderr
error[E0412]: cannot find type `Apple` in this scope
  --> $DIR/issue-35675.rs:17:29
   |
17 | fn should_return_fruit() -> Apple {
   |                             ^^^^^
   |                             |
   |                             not found in this scope
   |                             help: you can try using the variant's enum: `Fruit`

error[E0425]: cannot find function `Apple` in this scope
  --> $DIR/issue-35675.rs:19:5
   |
19 |     Apple(5)
   |     ^^^^^ not found in this scope
help: possible candidate is found in another module, you can import it into scope
   |
12 | use Fruit::Apple;
   |

error[E0573]: expected type, found variant `Fruit::Apple`
  --> $DIR/issue-35675.rs:23:33
   |
23 | fn should_return_fruit_too() -> Fruit::Apple {
   |                                 ^^^^^^^^^^^^
   |                                 |
   |                                 not a type
   |                                 help: you can try using the variant's enum: `Fruit`

error[E0425]: cannot find function `Apple` in this scope
  --> $DIR/issue-35675.rs:25:5
   |
25 |     Apple(5)
   |     ^^^^^ not found in this scope
help: possible candidate is found in another module, you can import it into scope
   |
12 | use Fruit::Apple;
   |

error[E0573]: expected type, found variant `Ok`
  --> $DIR/issue-35675.rs:29:13
   |
29 | fn foo() -> Ok {
   |             ^^ not a type
   |
   = help: there is an enum variant `std::prelude::v1::Ok`, try using `std::prelude::v1`?
   = help: there is an enum variant `std::result::Result::Ok`, try using `std::result::Result`?

error[E0412]: cannot find type `Variant3` in this scope
  --> $DIR/issue-35675.rs:34:13
   |
34 | fn bar() -> Variant3 {
   |             ^^^^^^^^
   |             |
   |             not found in this scope
   |             help: you can try using the variant's enum: `x::Enum`

error[E0573]: expected type, found variant `Some`
  --> $DIR/issue-35675.rs:38:13
   |
38 | fn qux() -> Some {
   |             ^^^^ not a type
   |
   = help: there is an enum variant `std::prelude::v1::Option::Some`, try using `std::prelude::v1::Option`?
   = help: there is an enum variant `std::prelude::v1::Some`, try using `std::prelude::v1`?

error: aborting due to 7 previous errors

